# docs/swagger.json
@@ -23,7 +23,10 @@
                 "summary": "Получение баланса пользователя",
                 "responses": {
                     "200": {
-                        "description": "Успешная обработка запроса"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.GetBalanceResponse"
+                        }
                     },
                     "401": {
                         "description": "Пользователь не авторизован",
@@ -41,16 +44,30 @@
             }
         },
         "/api/user/balance/withdraw": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
+                "consumes": [
+                    "application/json"
+                ],
                 "tags": [
                     "balance"
                 ],
                 "summary": "Запрос на списание средств",
+                "parameters": [
+                    {
+                        "description": "Данные списания",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CreateWithdrawRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Успешная обработка запроса"
@@ -74,7 +91,7 @@
                         }
                     },
                     "500": {
-                        "description": "Внутренняя ошибка",
+                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "type": "string"
                         }
@@ -305,7 +322,13 @@
                 "summary": "Получение списка списаний",
                 "responses": {
                     "200": {
-                        "description": "Успешная обработка запроса"
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.WithdrawalResponseItem"
+                            }
+                        }
                     },
                     "204": {
                         "description": "Нет списаний"
@@ -327,11 +350,33 @@
         }
     },
     "definitions": {
+        "handlers.CreateWithdrawRequest": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "type": "string"
+                },
+                "sum": {
+                    "type": "number"
+                }
+            }
+        },
+        "handlers.GetBalanceResponse": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "type": "number"
+                },
+                "withdrawn": {
+                    "type": "number"
+                }
+            }
+        },
         "handlers.GetOrdersResponseItem": {
             "type": "object",
             "properties": {
                 "accrual": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "number": {
                     "type": "string"
@@ -341,6 +386,20 @@
                 },
                 "uploaded_at": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.WithdrawalResponseItem": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "type": "string"
+                },
+                "processed_at": {
+                    "type": "string"
+                },
+                "sum": {
+                    "type": "number"
                 }
             }
         },
