# internal/entities/withdraw.go
@@ -1,9 +1,0 @@
-package entities
-
-import "time"
-
-type Withdraw struct {
-	order       string
-	sum         int
-	processedAt time.Time
-}
